delete entry, update entry mostly works, input box styling
