# api/openapi.yaml
@@ -76,14 +76,20 @@ paths:
             schema:
               type: object
               required:
-                - password
+                - currentPass
+                - newPass
               properties:
-                password:
+                currentPass:
                   type: string
                   format: password
-                  minLength: 4
+                  minLength: 8
+                newPass:
+                  type: string
+                  format: password
+                  minLength: 8
             example:
-              password: new-password
+              currentPass: password
+              newPass: new-password
       responses:
         200:
           description: Password updated
@@ -378,6 +384,8 @@ paths:
       responses:
         204:
           description: Entry deleted
+        400:
+          description: Bad request
         401:
           description: Not authenticated
         403:
